Fieldset unexpectedly stretches to minimum intrinsic width https://bugs.webkit.org/show_bug.cgi?id=79128

Patch by SravanKumar Sandela <ssandela@innominds.com> on 2012-03-22
Reviewed by Julien Chaffraix.

Source/WebCore:

Fieldset element width will now check if css width is specified explicitly
before stretching to minimum intrinsic width. The reference
can be taken from IE9, instead of FF(FF acknowledged the broken behavior).

Tests: fast/forms/fieldset-width-nostretch-ifspecified-expected.html
       fast/forms/fieldset-width-nostretch-ifspecified.html

* rendering/RenderFieldset.cpp:
(WebCore::RenderFieldset::stretchesToMinIntrinsicLogicalWidth):
(WebCore):
* rendering/RenderFieldset.h:
(RenderFieldset):

LayoutTests:

Ref tests to check no stretching to intrinsic width if width is explicitly specified.
Currently, calc width is Work-In-Progress, so it wont be supported now, and these ref
tests should automatically take care once Webkit enables it. Need to keep an eye on it.

* fast/forms/fieldset-width-nostretch-ifspecified-expected.html: Added.
* fast/forms/fieldset-width-nostretch-ifspecified.html: Added.

Canonical link: https://commits.webkit.org/99304@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111818 268f45cc-cd09-0410-ab3c-d52691b4dbfc